--- a/.github/workflows/test-saltproc.yml
+++ b/.github/workflows/test-saltproc.yml
@@ -88,7 +88,7 @@ jobs:
           cd openmc
           python tools/ci/gha-install.py
           mkdir openmc_src
-          mdkir openmc_src/bin
+          mkdir openmc_src/bin
           mkdir openmc_src/lib
           mkdir openmc_src/share
           mkdir openmc_src/include
