--- a/.github/workflows/test-saltproc.yml
+++ b/.github/workflows/test-saltproc.yml
@@ -51,12 +51,12 @@ jobs:
       - name: Set cache date
         run: echo "DATE=$(date +'%Y%m%d')" >> $GITHUB_ENV
 
-      - uses: actions/cache@v2
+      - uses: actions/cache@v3
         id: dependencies-cache
         with:
           path: |
             /usr/share/miniconda3/envs/saltproc-env
-            ~/build
+            ~/openmc_src
             ~/endfb71_hdf5
             ~/.cache/pip
           key: depcache-${{ hashFiles('environment.yml') }}-${{ env.DATE }}-${{ env.CACHE_NUMBER }}
@@ -87,16 +87,42 @@ jobs:
         run: |
           cd openmc
           python tools/ci/gha-install.py
-          mv build $HOME/build
+          mkdir openmc_src
+          mkdir openmc_src/bin
+          mkdir openmc_src/lib
+          mkdir openmc_src/share
+          mkdir openmc_src/include
+          cp /usr/local/bin/openmc openmc_src/bin/.
+          cp -r /usr/local/lib/x86_64-linux-gnu/ openmc_src/lib/.
+          cp -r /usr/local/share/openmc openmc_src/share/.
+          cp -r /usr/local/share/man openmc_src/share/.
+          cp -r /usr/local/include/openmc openmc_src/include/.
+          cp /usr/local/include/pugiconfig.hpp openmc_src/include/.
+          cp /usr/local/include/pugixml.hpp openmc_src/include/.
+          cp -r /usr/local/include/fmt openmc_src/include/.
+          cp -r /usr/local/include/xtl openmc_src/include/.
+          cp -r /usr/local/include/xtensor openmc_src/include/.
+          cp -r /usr/local/include/gsl openmc_src/include/.
+          cp -r /usr/local/include/gsl-lite openmc_src/include/.
+          mv openmc_src $HOME/openmc_src
           pip install .
           cd ../
           
-      - name: Build OpenMC from cached CMake files
+      - name: Restore OpenMC src
         if: steps.dependencies-cache.outputs.cache-hit == 'true'
         run: |
-          cd $HOME/build
-          make install
-          cd $GITHUB_WORKSPACE
+          sudo mv $HOME/openmc_src/bin/openmc /usr/local/bin/openmc
+          sudo mv $HOME/openmc_src/lib/x86_64-linux-gnu /usr/local/lib/x86_64-linux-gnu/
+          sudo mv $HOME/openmc_src/share/openmc /usr/local/share/openmc
+          sudo mv $HOME/openmc_src/share/man /usr/local/share/man
+          sudo mv $HOME/openmc_src/include/openmc /usr/local/include/openmc
+          sudo mv $HOME/openmc_src/include/pugiconfig.hpp /usr/local/include/pugiconfig.hpp
+          sudo mv $HOME/openmc_src/include/pugixml.hpp /usr/local/include/pugixml.hpp
+          sudo mv $HOME/openmc_src/include/fmt /usr/local/include/fmt
+          sudo mv $HOME/openmc_src/include/xtl /usr/local/include/xtl
+          sudo mv $HOME/openmc_src/include/xtensor /usr/local/include/xtensor
+          sudo mv $HOME/openmc_src/include/gsl /usr/local/include/gsl
+          sudo mv $HOME/openmc_src/include/gsl-lite /usr/local/include/gsl-lite
           
       - name: Install SaltProc
         run:  pip install .
