address @munkm's comments

--- a/.github/workflows/cache-dependencies.yml
+++ b/.github/workflows/cache-dependencies.yml
@@ -77,47 +77,13 @@ jobs:
           repository: openmc-dev/openmc
           path: openmc
           
-      - name: Build OpenMC from scratch
+      - name: Build OpenMC from source if no cache if found
         if: steps.dependencies-cache.outputs.cache-hit != 'true'
-        run: |
-          cd openmc
-          python tools/ci/gha-install.py
-          mkdir openmc_src
-          mkdir openmc_src/bin
-          mkdir openmc_src/lib
-          mkdir openmc_src/share
-          mkdir openmc_src/include
-          cp /usr/local/bin/openmc openmc_src/bin/.
-          cp -r /usr/local/lib/x86_64-linux-gnu/ openmc_src/lib/.
-          cp -r /usr/local/share/openmc openmc_src/share/.
-          cp -r /usr/local/share/man openmc_src/share/.
-          cp -r /usr/local/include/openmc openmc_src/include/.
-          cp /usr/local/include/pugiconfig.hpp openmc_src/include/.
-          cp /usr/local/include/pugixml.hpp openmc_src/include/.
-          cp -r /usr/local/include/fmt openmc_src/include/.
-          cp -r /usr/local/include/xtl openmc_src/include/.
-          cp -r /usr/local/include/xtensor openmc_src/include/.
-          cp -r /usr/local/include/gsl openmc_src/include/.
-          cp -r /usr/local/include/gsl-lite openmc_src/include/.
-          mv openmc_src $HOME/openmc_src
-          pip install .
-          cd ../
-          
-      - name: Restore OpenMC src
+        run: $GITHUB_WORKSPACE/tools/ci/build-openmc.sh
+
+      - name: Restore OpenMC source build from cache
         if: steps.dependencies-cache.outputs.cache-hit == 'true'
-        run: |
-          sudo mv $HOME/openmc_src/bin/openmc /usr/local/bin/openmc
-          sudo mv $HOME/openmc_src/lib/x86_64-linux-gnu /usr/local/lib/x86_64-linux-gnu/
-          sudo mv $HOME/openmc_src/share/openmc /usr/local/share/openmc
-          sudo mv $HOME/openmc_src/share/man /usr/local/share/man
-          sudo mv $HOME/openmc_src/include/openmc /usr/local/include/openmc
-          sudo mv $HOME/openmc_src/include/pugiconfig.hpp /usr/local/include/pugiconfig.hpp
-          sudo mv $HOME/openmc_src/include/pugixml.hpp /usr/local/include/pugixml.hpp
-          sudo mv $HOME/openmc_src/include/fmt /usr/local/include/fmt
-          sudo mv $HOME/openmc_src/include/xtl /usr/local/include/xtl
-          sudo mv $HOME/openmc_src/include/xtensor /usr/local/include/xtensor
-          sudo mv $HOME/openmc_src/include/gsl /usr/local/include/gsl
-          sudo mv $HOME/openmc_src/include/gsl-lite /usr/local/include/gsl-lite
+        run: $GITHUB_WORKSPACE/tools/ci/restore-openmc.sh
           
       - name: Install SaltProc
         run: pip install .
