cleanup run_constant_reprocessing

--- a/tests/integration_tests/run_constant_reprocessing/test_input.ini
+++ b/tests/integration_tests/run_constant_reprocessing/test_input.ini
@@ -1,5 +1,5 @@
-include "../../../../examples/tap/mats/saltproc_prepr_comp.ini"
-include "../../../../examples/tap/mats/non_burnable_mats.ini"
+include "../../../examples/tap/mats/saltproc_prepr_comp.ini"
+include "../../../examples/tap/mats/non_burnable_mats.ini"
 
 
 
