--- a/.github/workflows/test-saltproc.yml
+++ b/.github/workflows/test-saltproc.yml
@@ -96,4 +96,4 @@ jobs:
       - name: Test SaltProc
         run: |
           echo "OPENMC_CROSS_SECTIONS=$HOME/endfb71_hdf5/cross_sections.xml" >> $GITHUB_ENV
-          pytest --ignore saltproc/tests/integration_tests saltproc
+          pytest --ignore=tests/integration_tests/run_* tests/
