--- a/.github/workflows/test-saltproc.yml
+++ b/.github/workflows/test-saltproc.yml
@@ -5,7 +5,7 @@ on:
   push:
     paths:
       - 'saltproc/**'
-      - 'saltproc/tests/**'
+      - 'tests/**'
   pull_request:
   workflow_run:
     workflows: ["Cache dependencies"]
