--- a/examples/msbr/geometry/msbr_full.ini
+++ b/examples/msbr/geometry/msbr_full.ini
@@ -49,12 +49,28 @@ cell 617  15  moder 1 -15                     % Graphite block
 cell 618  15  fuel  15 -3                     % Fuel salt outside graphite block
 cell 615  15  outside   3                     % Outside world
 % ======== Vertical stack Zone I-A cell (marked as 1 in main lattice) ===========================================
-lat 1 9 0.0 0.0 5
- 0.0    12
-22.86   11
-419.10  13
-438.15  14
-445.135 15
+%lat 1 9 0.0 0.0 5
+% 0.0    12
+%22.86   11
+%419.10  13
+%438.15  14
+%445.135 15
+% --- Surfaces
+surf 12b pz 0.0
+surf 11b pz 22.86
+surf 13b pz 419.10
+surf 14b pz 438.15
+surf 15b pz 445.135
+cell 1001 1 fill 12 -3 12b -11b
+cell 1002 1 fill 11 -3 11b -13b
+cell 1003 1 fill 13 -3 13b -14b
+cell 1004 1 fill 14 -3 14b -15b
+cell 1005 1 fill 15 -3 15b
+% -- make sure the cells are in the correct place
+trans F 1002 0 0 22.86
+trans F 1003 0 0 419.10
+trans F 1004 0 0 438.15
+trans F 1005 0 0 445.135
 
 % --- Surfaces (core pitch = 10.16 cm) - Zone II-A Universe 2:
 surf 21  cyl 0.0 0.0 3.302                 % Hole with fuel salt (Fig.3.5 Robertson) 3.27787 - p. 47
@@ -113,12 +129,31 @@ cell 741  25  fuel  35 -23                             % Fuel salt outside graph
 cell 742  25  outside   23                             % Outside world
 
 % ======== Vertical stack Zone II-A cell (marked as 2 in main lattice) ===========================================
-lat 2 9 0.0 0.0 5
- 0.0    21
-434.34  22
-436.88  23
-439.42  24
-441.96  25
+%lat 2 9 0.0 0.0 5
+% 0.0    21
+%434.34  22
+%436.88  23
+%439.42  24
+%441.96  25
+% --- Surfaces
+surf 21b pz 0.0
+surf 22b pz 434.34
+surf 23b pz 436.88
+surf 24b pz 439.42
+surf 25b pz 441.96
+cell 2001 2 fill 12 -3 21b -22b
+cell 2002 2 fill 11 -3 22b -23b
+cell 2003 2 fill 13 -3 23b -24b
+cell 2004 2 fill 14 -3 24b -25b
+cell 2005 2 fill 15 -3 25b
+% -- make sure the cells are in the correct place
+trans F 2002 0 0 434.34
+trans F 2003 0 0 436.88
+trans F 2004 0 0 439.42
+trans F 2005 0 0 441.96
+
+
+
 
 % --- Surfaces (core pitch = 15.24 cm) - Control rods Universe 3:
 surf 41  cyl 0.0 0.0 5.08                           % Hole with fuel salt
