make msbr geo and mat files work nicely with the script;

--- a/examples/msbr/geometry/msbr_full.ini
+++ b/examples/msbr/geometry/msbr_full.ini
@@ -758,6 +758,6 @@ cell 312  0    outside   3014
 cell 330  0    fill 300 3104 -3103 3003 3011 -3012        % inside smaller octader, smallest
 cell 331  0    fill 300 -3104 3003 3011 -3012	          % inside smallest
 
-cell 300  0    fill 300 -3100 3103 3104 3003 3011 -3012   % inside base octader, deducted smaller and smallest
+cell 300b  0    fill 300 -3100 3103 3104 3003 3011 -3012   % inside base octader, deducted smaller and smallest
 
 cell 350  0    fill 10  -3002 3103 3104 3100 3011 -3012   % radial reflector lattice
