remove extra cells for storing lattices; create notebook to troubleshoot model issues

--- a/examples/msbr/geometry/msbr_full.ini
+++ b/examples/msbr/geometry/msbr_full.ini
@@ -22,32 +22,32 @@ cell 8  11  moder -8                        % replay part of left-upper graphite
 cell 9  11  moder -9                        % replay part of right-bottom graphite element
 cell 10 11  moder -10                       % replay part of right-upper graphite element
 cell 11 11  moder -11                       % replay part of left-bottom graphite element
-cell 12 11  outside   3                     % Outside world
+%cell 12 11  outside   3                     % Outside world
 % ============ Bottom part: Zone I-A (Universe 12) ========================
 surf 12 cyl 0.0 0.0 4.953                     % Graphite round outer wall
 cell 601  12  fuel  -1                        % Fuel hole
 cell 602  12  moder 1 -12                     % Graphite block
 cell 603  12  fuel  12 -3                     % Fuel salt outside graphite block
-cell 612 12  outside   3                     % Outside world
+%cell 612 12  outside   3                     % Outside world
 % ============ Upper part 1: Zone I-A (Universe 13) ========================
 surf 13 cyl 0.0 0.0 4.953                   % Graphite round outer wall above main 13-feet part
 cell 604  13  fuel  -1                        % Fuel hole
 cell 605  13  moder 1 -13                     % Graphite block
 cell 606  13  fuel  13 -3                     % Fuel salt outside graphite block
-cell 613  13  outside   3                     % Outside world
+%cell 613  13  outside   3                     % Outside world
 % ============ Upper part 2: Zone I-A (Universe 14) ========================
 surf 14 cone 0.0 0.0 0.0 4.953 12.66          % Graphite cone outer wall part
 cell 607  14  fuel  -1                        % Fuel hole
 cell 608  14  moder 1 -14                     % Graphite block
 cell 609  14  fuel  14 -3                     % Fuel salt outside graphite block
-cell 614  14  outside   3                     % Outside world
+%cell 614  14  outside   3                     % Outside world
 % ============ Upper part 3: Zone I-A (Universe 15) ========================
 surf 15  cyl  0.0 0.0 2.2225                  % Graphite outer wall part
 surf 16  cyl  0.0 0.0 0.762                   % Fuel hole 0.6 in
 cell 616  15  hast  -1                        % Hastelloy N
 cell 617  15  moder 1 -15                     % Graphite block
 cell 618  15  fuel  15 -3                     % Fuel salt outside graphite block
-cell 615  15  outside   3                     % Outside world
+%cell 615  15  outside   3                     % Outside world
 % ======== Vertical stack Zone I-A cell (marked as 1 in main lattice) ===========================================
 %lat 1 9 0.0 0.0 5
 % 0.0    12
@@ -96,7 +96,7 @@ cell 28  21  moder -28                                % replay part of left-uppe
 cell 29  21  moder -29                                % replay part of right-bottom graphite element
 cell 30  21  moder -30                                % replay part of right-upper graphite element
 cell 31  21  moder -31                                % replay part of left-bottom graphite element
-cell 32  21  outside   23                             % Outside world
+%cell 32  21  outside   23                             % Outside world
 % =====Cells: Universe 22: Upper part 1 (from H=434.34cm to 436.88cm): Zone II-A ============
 surf 32  cyl 0.0 0.0 0.635                            % Hole with fuel salt (Fig.3.5 Robertson p. 47) d=0.5in
 cell 721  22  fuel  -32                                % Fuel hole
@@ -110,23 +110,23 @@ cell 728  22  moder -28                                % replay part of left-upp
 cell 729  22  moder -29                                % replay part of right-bottom graphite element
 cell 730  22  moder -30                                % replay part of right-upper graphite element
 cell 731  22  moder -31                                % replay part of left-bottom graphite element
-cell 732  22  outside   23                             % Outside world
+%cell 732  22  outside   23                             % Outside world
 %===========Cells: Universe 23: Upper part 2 (from H=436.88cm to 439.42cm): Zone II-A ===========================
 surf 33  cyl 0.0 0.0 3.65125                           % Outer cylindrical surface (Fig.3.5 Robertson p. 47) d=2 7/8 in
 cell 733  23  fuel  -32                                % Fuel hole
 cell 734  23  moder 32 -33                             % Graphite block
 cell 735  23  fuel  33 -23                             % Fuel salt outside graphite block
-cell 736  23  outside   23                             % Outside world
+%cell 736  23  outside   23                             % Outside world
 %===========Cells: Universe 24: Upper part 3 (from H=439.42cm to 441.96cm): Zone II-A ===========================
 surf 34  cone 0.0 0.0 0.0 3.65125 6.5                % Outer cone surface (Fig.3.5 Robertson p. 47)
 cell 737  24  moder -34                                % Graphite block
 cell 738  24  fuel  34 -23                             % Fuel salt outside graphite block
-cell 739  24  outside   23                             % Outside world
+%cell 739  24  outside   23                             % Outside world
 %===========Cells: Universe 25: Upper part 4 (from H=441.96cm to 449.58cm): Zone II-A ===========================
 surf 35  cyl 0.0 0.0 2.2225                            % Outer cylindrical surface (Fig.3.5 Robertson p. 47)
 cell 740  25  moder -35                                % Graphite block
 cell 741  25  fuel  35 -23                             % Fuel salt outside graphite block
-cell 742  25  outside   23                             % Outside world
+%cell 742  25  outside   23                             % Outside world
 
 % ======== Vertical stack Zone II-A cell (marked as 2 in main lattice) ===========================================
 %lat 2 9 0.0 0.0 5
@@ -141,11 +141,11 @@ surf 22b pz 434.34
 surf 23b pz 436.88
 surf 24b pz 439.42
 surf 25b pz 441.96
-cell 2001 2 fill 12 -3 21b -22b
-cell 2002 2 fill 11 -3 22b -23b
-cell 2003 2 fill 13 -3 23b -24b
-cell 2004 2 fill 14 -3 24b -25b
-cell 2005 2 fill 15 -3 25b
+cell 2001 2 fill 21 -3 21b -22b
+cell 2002 2 fill 22 -3 22b -23b
+cell 2003 2 fill 23 -3 23b -24b
+cell 2004 2 fill 24 -3 24b -25b
+cell 2005 2 fill 25 -3 25b
 % -- make sure the cells are in the correct place
 trans F 2002 0 0 434.34
 trans F 2003 0 0 436.88
@@ -183,7 +183,7 @@ cell 48  3  moder -48                                       % replay part of lef
 cell 49  3  moder -49                                       % replay part of right-bottom graphite element
 cell 50  3  moder -50                                       % replay part of right-upper graphite element
 cell 51  3  moder -51                                       % replay part of left-bottom graphite element
-cell 52  3  outside   43                      		    % Outside world
+%cell 52  3  outside   43                      		    % Outside world
 
 % --- Cells: Universe 4: Control rods channels (no control rods in)
 cell 841  4  fuel  -41                                       % Fuel hole
@@ -197,7 +197,7 @@ cell 848  4  moder -48                                       % replay part of le
 cell 849  4  moder -49                                       % replay part of right-bottom graphite element
 cell 850  4  moder -50                                       % replay part of right-upper graphite element
 cell 851  4  moder -51                                       % replay part of left-bottom graphite element
-cell 852  4  outside   43                      		     % Outside world
+%cell 852  4  outside   43                      		     % Outside world
 
 % ------ Vacuum cell
 cell 57  5  void -3
@@ -752,8 +752,8 @@ cell 307  0    hast -3006 3005 3015 -3013
 cell 308  0    hast -3006 3013 -3014
 cell 309  0    hast -3006 -3015 3016
 cell 310  0    outside   3006  3016 -3014
-cell 311  0    outside   -3016
-cell 312  0    outside   3014
+%cell 311  0    outside   -3016
+%cell 312  0    outside   3014
 
 cell 330  0    fill 300 3104 -3103 3003 3011 -3012        % inside smaller octader, smallest
 cell 331  0    fill 300 -3104 3003 3011 -3012	          % inside smallest
