--- a/examples/msbr/geometry/msbr_full.ini
+++ b/examples/msbr/geometry/msbr_full.ini
@@ -22,32 +22,27 @@ cell 8  11  moder -8                        % replay part of left-upper graphite
 cell 9  11  moder -9                        % replay part of right-bottom graphite element
 cell 10 11  moder -10                       % replay part of right-upper graphite element
 cell 11 11  moder -11                       % replay part of left-bottom graphite element
-cell 12 11  outside   3                     % Outside world
 % ============ Bottom part: Zone I-A (Universe 12) ========================
 surf 12 cyl 0.0 0.0 4.953                     % Graphite round outer wall
 cell 601  12  fuel  -1                        % Fuel hole
 cell 602  12  moder 1 -12                     % Graphite block
 cell 603  12  fuel  12 -3                     % Fuel salt outside graphite block
-cell 612 12  outside   3                     % Outside world
 % ============ Upper part 1: Zone I-A (Universe 13) ========================
 surf 13 cyl 0.0 0.0 4.953                   % Graphite round outer wall above main 13-feet part
 cell 604  13  fuel  -1                        % Fuel hole
 cell 605  13  moder 1 -13                     % Graphite block
 cell 606  13  fuel  13 -3                     % Fuel salt outside graphite block
-cell 613  13  outside   3                     % Outside world
 % ============ Upper part 2: Zone I-A (Universe 14) ========================
 surf 14 cone 0.0 0.0 0.0 4.953 12.66          % Graphite cone outer wall part
 cell 607  14  fuel  -1                        % Fuel hole
 cell 608  14  moder 1 -14                     % Graphite block
 cell 609  14  fuel  14 -3                     % Fuel salt outside graphite block
-cell 614  14  outside   3                     % Outside world
 % ============ Upper part 3: Zone I-A (Universe 15) ========================
 surf 15  cyl  0.0 0.0 2.2225                  % Graphite outer wall part
 surf 16  cyl  0.0 0.0 0.762                   % Fuel hole 0.6 in
 cell 616  15  hast  -1                        % Hastelloy N
 cell 617  15  moder 1 -15                     % Graphite block
 cell 618  15  fuel  15 -3                     % Fuel salt outside graphite block
-cell 615  15  outside   3                     % Outside world
 % ======== Vertical stack Zone I-A cell (marked as 1 in main lattice) ===========================================
 lat 1 9 0.0 0.0 5
  0.0    12
@@ -80,7 +75,6 @@ cell 28  21  moder -28                                % replay part of left-uppe
 cell 29  21  moder -29                                % replay part of right-bottom graphite element
 cell 30  21  moder -30                                % replay part of right-upper graphite element
 cell 31  21  moder -31                                % replay part of left-bottom graphite element
-cell 32  21  outside   23                             % Outside world
 % =====Cells: Universe 22: Upper part 1 (from H=434.34cm to 436.88cm): Zone II-A ============
 surf 32  cyl 0.0 0.0 0.635                            % Hole with fuel salt (Fig.3.5 Robertson p. 47) d=0.5in
 cell 721  22  fuel  -32                                % Fuel hole
@@ -94,23 +88,19 @@ cell 728  22  moder -28                                % replay part of left-upp
 cell 729  22  moder -29                                % replay part of right-bottom graphite element
 cell 730  22  moder -30                                % replay part of right-upper graphite element
 cell 731  22  moder -31                                % replay part of left-bottom graphite element
-cell 732  22  outside   23                             % Outside world
 %===========Cells: Universe 23: Upper part 2 (from H=436.88cm to 439.42cm): Zone II-A ===========================
 surf 33  cyl 0.0 0.0 3.65125                           % Outer cylindrical surface (Fig.3.5 Robertson p. 47) d=2 7/8 in
 cell 733  23  fuel  -32                                % Fuel hole
 cell 734  23  moder 32 -33                             % Graphite block
 cell 735  23  fuel  33 -23                             % Fuel salt outside graphite block
-cell 736  23  outside   23                             % Outside world
 %===========Cells: Universe 24: Upper part 3 (from H=439.42cm to 441.96cm): Zone II-A ===========================
 surf 34  cone 0.0 0.0 0.0 3.65125 6.5                % Outer cone surface (Fig.3.5 Robertson p. 47)
 cell 737  24  moder -34                                % Graphite block
 cell 738  24  fuel  34 -23                             % Fuel salt outside graphite block
-cell 739  24  outside   23                             % Outside world
 %===========Cells: Universe 25: Upper part 4 (from H=441.96cm to 449.58cm): Zone II-A ===========================
 surf 35  cyl 0.0 0.0 2.2225                            % Outer cylindrical surface (Fig.3.5 Robertson p. 47)
 cell 740  25  moder -35                                % Graphite block
 cell 741  25  fuel  35 -23                             % Fuel salt outside graphite block
-cell 742  25  outside   23                             % Outside world
 
 % ======== Vertical stack Zone II-A cell (marked as 2 in main lattice) ===========================================
 lat 2 9 0.0 0.0 5
@@ -148,7 +138,6 @@ cell 48  3  moder -48                                       % replay part of lef
 cell 49  3  moder -49                                       % replay part of right-bottom graphite element
 cell 50  3  moder -50                                       % replay part of right-upper graphite element
 cell 51  3  moder -51                                       % replay part of left-bottom graphite element
-cell 52  3  outside   43                      		    % Outside world
 
 % --- Cells: Universe 4: Control rods channels (no control rods in)
 cell 841  4  fuel  -41                                       % Fuel hole
@@ -162,7 +151,6 @@ cell 848  4  moder -48                                       % replay part of le
 cell 849  4  moder -49                                       % replay part of right-bottom graphite element
 cell 850  4  moder -50                                       % replay part of right-upper graphite element
 cell 851  4  moder -51                                       % replay part of left-bottom graphite element
-cell 852  4  outside   43                      		     % Outside world
 
 % ------ Vacuum cell
 cell 57  5  void -3
@@ -707,15 +695,15 @@ surf 3103 octa 0.0 0.0 218.44 215.53       % smaller octader, which cover 8 tria
 surf 3104 octa 0.0 0.0 228.60 193.97       % smallest octader, which cover 8 triangle elements
 % --- Cells:
 %cell 300  0    fill 300 -3000 3003 3011 -3012
-cell 303  0    fill 400 -3003 3011 -3012
-cell 305  0    fuel -3004 3002 3011 -3012
-cell 306  0    moder -3005 3004 3015 -3013
-cell 313  0    moder -3004 3012 -3013
-cell 314  0    moder -3004 3015 -3017
-cell 315  0    fuel -3004 3017 -3011
-cell 307  0    hast -3006 3005 3015 -3013
-cell 308  0    hast -3006 3013 -3014
-cell 309  0    hast -3006 -3015 3016
+cell 303  0    fill 400 -3003 3011 -3012                  % Control rod lattice cell
+cell 305  0    fuel -3004 3002 3011 -3012                 % Annulus
+cell 306  0    moder -3005 3004 3015 -3013                % Radial Reflector
+cell 313  0    moder -3004 3012 -3013                     % Top axial reflector
+cell 314  0    moder -3004 3015 -3017                     % Bottom axial reflector
+cell 315  0    fuel -3004 3017 -3011                      % Lower plenum
+cell 307  0    hast -3006 3005 3015 -3013                 % Radial vessel
+cell 308  0    hast -3006 3013 -3014                      % Top vessel
+cell 309  0    hast -3006 -3015 3016                      % Bottom vessel
 cell 310  0    outside   3006  3016 -3014
 cell 311  0    outside   -3016
 cell 312  0    outside   3014
@@ -725,4 +713,4 @@ cell 331  0    fill 300 -3104 3003 3011 -3012	          % inside smallest
 
 cell 300  0    fill 300 -3100 3103 3104 3003 3011 -3012   % inside base octader, deducted smaller and smallest
 
-cell 350  0    fill 10  -3002 3103 3104 3100 3011 -3012   % radial reflector lattice
+cell 350  0    fill 10  -3002 3103 3104 3100 3011 -3012   % radial reflector lattice (Zone IIB)
