remove unneeded element bounding surfaces

--- a/examples/msbr/geometry/msbr_full.ini
+++ b/examples/msbr/geometry/msbr_full.ini
@@ -1,7 +1,7 @@
 % --- Surfaces (core pitch = 10.16 cm): Zone I-A
 surf 1  cyl 0.0 0.0 1.71069             % Hole with fuel salt
 surf 2  sqc 0.0 0.0 4.953  0.46         % Graphite square outer wall 1.07
-surf 3  sqc 0.0 0.0 5.08                % Outer boundary
+%surf 3  sqc 0.0 0.0 5.08                % Outer boundary
 surf 4  cyl -4.28498 4.53898   0.66802    % Left-upper graphite element 1.15
 surf 5  cyl 4.28498 -4.53898   0.66802    % Right-bottom graphite element
 surf 6  cyl -4.53898 -4.28498  0.66802    % Left-bottom graphite element
@@ -13,7 +13,7 @@ surf 11 cyl  5.62102 -4.28498  0.66802   % replay part of left-bottom graphite e
 % --- Cells: Universe 11: Zone I-A
 cell 1  11  fuel  -1                        % Fuel hole
 cell 2  11  moder 1 -2 4 5 6 7 8 9 10 11    % Graphite block
-cell 3  11  fuel  2 -3 4 5 6 7 8 9 10 11    % Fuel salt outside graphite block
+cell 3  11  fuel  2 4 5 6 7 8 9 10 11    % Fuel salt outside graphite block
 cell 4  11  moder -4                        % Left-upper graphite element
 cell 5  11  moder -5                        % Right-bottom graphite element
 cell 6  11  moder -6                        % Left-bottom graphite element
@@ -26,23 +26,23 @@ cell 11 11  moder -11                       % replay part of left-bottom graphit
 surf 12 cyl 0.0 0.0 4.953                     % Graphite round outer wall
 cell 601  12  fuel  -1                        % Fuel hole
 cell 602  12  moder 1 -12                     % Graphite block
-cell 603  12  fuel  12 -3                     % Fuel salt outside graphite block
+cell 603  12  fuel  12                        % Fuel salt outside graphite block
 % ============ Upper part 1: Zone I-A (Universe 13) ========================
 surf 13 cyl 0.0 0.0 4.953                   % Graphite round outer wall above main 13-feet part
 cell 604  13  fuel  -1                        % Fuel hole
 cell 605  13  moder 1 -13                     % Graphite block
-cell 606  13  fuel  13 -3                     % Fuel salt outside graphite block
+cell 606  13  fuel  13                        % Fuel salt outside graphite block
 % ============ Upper part 2: Zone I-A (Universe 14) ========================
 surf 14 cone 0.0 0.0 0.0 4.953 12.66          % Graphite cone outer wall part
 cell 607  14  fuel  -1                        % Fuel hole
 cell 608  14  moder 1 -14                     % Graphite block
-cell 609  14  fuel  14 -3                     % Fuel salt outside graphite block
+cell 609  14  fuel  14                        % Fuel salt outside graphite block
 % ============ Upper part 3: Zone I-A (Universe 15) ========================
 surf 15  cyl  0.0 0.0 2.2225                  % Graphite outer wall part
 surf 16  cyl  0.0 0.0 0.762                   % Fuel hole 0.6 in
 cell 616  15  hast  -1                        % Hastelloy N
 cell 617  15  moder 1 -15                     % Graphite block
-cell 618  15  fuel  15 -3                     % Fuel salt outside graphite block
+cell 618  15  fuel  15                        % Fuel salt outside graphite block
 % ======== Vertical stack Zone I-A cell (marked as 1 in main lattice) ===========================================
 lat 1 9 0.0 0.0 5
  0.0    12
@@ -54,7 +54,7 @@ lat 1 9 0.0 0.0 5
 % --- Surfaces (core pitch = 10.16 cm) - Zone II-A Universe 2:
 surf 21  cyl 0.0 0.0 3.302                 % Hole with fuel salt (Fig.3.5 Robertson) 3.27787 - p. 47
 surf 22  sqc 0.0 0.0 4.953  0.46           % Graphite square outer wall 1.07
-surf 23  sqc 0.0 0.0 5.08                  % Outer boundary
+%surf 23  sqc 0.0 0.0 5.08                  % Outer boundary
 surf 24  cyl -4.28498 4.53898  0.66802     % Left-upper graphite element 1.15
 surf 25  cyl 4.28498 -4.53898  0.66802     % Right-bottom graphite element
 surf 26  cyl -4.53898 -4.28498 0.66802     % Left-bottom graphite element
@@ -66,7 +66,7 @@ surf 31 cyl  5.62102 -4.28498  0.66802     % replay part of left-bottom graphite
 % --- Cells: Universe 21: Bottom(main) part: Zone I-A =======================================
 cell 21  21  fuel  -21                                % Fuel hole
 cell 22  21  moder 21 -22 24 25 26 27 28 29 30 31     % Graphite block
-cell 23  21  fuel  22 -23 24 25 26 27 28 29 30 31     % Fuel salt outside graphite block
+cell 23  21  fuel  22 24 25 26 27 28 29 30 31         % Fuel salt outside graphite block
 cell 24  21  moder -24                                % Left-upper graphite element
 cell 25  21  moder -25                                % Right-bottom graphite element
 cell 26  21  moder -26                                % Left-bottom graphite element
@@ -79,7 +79,7 @@ cell 31  21  moder -31                                % replay part of left-bott
 surf 32  cyl 0.0 0.0 0.635                            % Hole with fuel salt (Fig.3.5 Robertson p. 47) d=0.5in
 cell 721  22  fuel  -32                                % Fuel hole
 cell 722  22  moder 32 -22 24 25 26 27 28 29 30 31     % Graphite block
-cell 723  22  fuel  22 -23 24 25 26 27 28 29 30 31     % Fuel salt outside graphite block
+cell 723  22  fuel  22 24 25 26 27 28 29 30 31         % Fuel salt outside graphite block
 cell 724  22  moder -24                                % Left-upper graphite element
 cell 725  22  moder -25                                % Right-bottom graphite element
 cell 726  22  moder -26                                % Left-bottom graphite element
@@ -92,15 +92,15 @@ cell 731  22  moder -31                                % replay part of left-bot
 surf 33  cyl 0.0 0.0 3.65125                           % Outer cylindrical surface (Fig.3.5 Robertson p. 47) d=2 7/8 in
 cell 733  23  fuel  -32                                % Fuel hole
 cell 734  23  moder 32 -33                             % Graphite block
-cell 735  23  fuel  33 -23                             % Fuel salt outside graphite block
+cell 735  23  fuel  33                                 % Fuel salt outside graphite block
 %===========Cells: Universe 24: Upper part 3 (from H=439.42cm to 441.96cm): Zone II-A ===========================
 surf 34  cone 0.0 0.0 0.0 3.65125 6.5                % Outer cone surface (Fig.3.5 Robertson p. 47)
 cell 737  24  moder -34                                % Graphite block
-cell 738  24  fuel  34 -23                             % Fuel salt outside graphite block
+cell 738  24  fuel  34                                 % Fuel salt outside graphite block
 %===========Cells: Universe 25: Upper part 4 (from H=441.96cm to 449.58cm): Zone II-A ===========================
 surf 35  cyl 0.0 0.0 2.2225                            % Outer cylindrical surface (Fig.3.5 Robertson p. 47)
 cell 740  25  moder -35                                % Graphite block
-cell 741  25  fuel  35 -23                             % Fuel salt outside graphite block
+cell 741  25  fuel  35                                 % Fuel salt outside graphite block
 
 % ======== Vertical stack Zone II-A cell (marked as 2 in main lattice) ===========================================
 lat 2 9 0.0 0.0 5
@@ -113,7 +113,7 @@ lat 2 9 0.0 0.0 5
 % --- Surfaces (core pitch = 15.24 cm) - Control rods Universe 3:
 surf 41  cyl 0.0 0.0 5.08                           % Hole with fuel salt
 surf 42  sqc 0.0 0.0 7.23646 0.99             % Graphite square outer wall 1.07
-surf 43  sqc 0.0 0.0 7.62                     % Outer boundary
+%surf 43  sqc 0.0 0.0 7.62                     % Outer boundary
 surf 44  hexyc -5.8801 6.505  1.16 0.18       % Left-upper graphite element 1.15
 surf 45  hexyc 5.8801 -6.505  1.16 0.18       % Right-bottom graphite element
 surf 46  hexxc -6.505 -5.8801 1.16 0.18       % Left-bottom graphite element
@@ -129,7 +129,7 @@ surf 39 cyl 0.0 0.0 4.7625                    % control rod diameter 3.75in (Rob
 cell 53  3  moder -39                                       % Control rods
 cell 41  3  fuel  -41 39                                    % Fuel hole
 cell 42  3  moder 41 -42 44 45 46 47 48 49 50 51            % Graphite block
-cell 43  3  fuel  42 -43 44 45 46 47 48 49 50 51            % Fuel salt outside graphite block
+cell 43  3  fuel  42 44 45 46 47 48 49 50 51                % Fuel salt outside graphite block
 cell 44  3  moder -44                                       % Left-upper graphite element
 cell 45  3  moder -45                                       % Right-bottom graphite element
 cell 46  3  moder -46                                       % Left-bottom graphite element
@@ -142,7 +142,7 @@ cell 51  3  moder -51                                       % replay part of lef
 % --- Cells: Universe 4: Control rods channels (no control rods in)
 cell 841  4  fuel  -41                                       % Fuel hole
 cell 842  4  moder 41 -42 44 45 46 47 48 49 50 51            % Graphite block
-cell 843  4  fuel  42 -43 44 45 46 47 48 49 50 51            % Fuel salt outside graphite block
+cell 843  4  fuel  42 44 45 46 47 48 49 50 51                % Fuel salt outside graphite block
 cell 844  4  moder -44                                       % Left-upper graphite element
 cell 845  4  moder -45                                       % Right-bottom graphite element
 cell 846  4  moder -46                                       % Left-bottom graphite element
@@ -153,7 +153,7 @@ cell 850  4  moder -50                                       % replay part of ri
 cell 851  4  moder -51                                       % replay part of left-bottom graphite element
 
 % ------ Vacuum cell
-cell 57  5  void -3
+cell 57  5  void
 
 %--------- Reflector cell
 %cell 58  6  refl -3
@@ -164,14 +164,14 @@ surf 53  plane -1.0 1.0 0.0 0.0 % Upper-left
 surf 54  plane 1.0 -1.0 0.0 0.0 % Bottom-right
 surf 55  plane -1.0 -1.0 0.0 0.0 % Bottom-left
 
-cell 500  7  moder -3 -52   % Top-right
-cell 501  7  fuel  -3  52   % Top-right
-cell 502  8  moder -3 -53   % Top-left
-cell 503  8  fuel  -3  53   % Top-left
-cell 504  9  moder -3 -54   % Bottom-right
-cell 505  9  fuel  -3  54   % Bottom-right
-cell 506  6  moder -3 -55   % Bottom-left
-cell 507  6  fuel  -3  55   % Bottom-left
+cell 500  7  moder -52   % Top-right
+cell 501  7  fuel   52   % Top-right
+cell 502  8  moder -53   % Top-left
+cell 503  8  fuel   53   % Top-left
+cell 504  9  moder -54   % Bottom-right
+cell 505  9  fuel   54   % Bottom-right
+cell 506  6  moder -55   % Bottom-left
+cell 507  6  fuel   55   % Bottom-left
 
 % --------- Reflector zone II-B
 surf 60  pad  0.0 0.0 229.6  256.032 1.769 -1.769    % Left horizontal big element
