fix zone names in serpent model

--- a/examples/msbr/geometry/msbr_full.ini
+++ b/examples/msbr/geometry/msbr_full.ini
@@ -1,4 +1,4 @@
-% --- Surfaces (core pitch = 10.16 cm): Zone I-A
+% --- Surfaces (core pitch = 10.16 cm): Zone I-B
 surf 1  cyl 0.0 0.0 1.71069             % Hole with fuel salt
 surf 2  sqc 0.0 0.0 4.953  0.46         % Graphite square outer wall 1.07
 surf 4  cyl -4.28498 4.53898   0.66802    % Left-upper graphite element 1.15
@@ -9,7 +9,7 @@ surf 8  cyl -4.28498 -5.62102  0.66802   % replay part of left-upper graphite el
 surf 9  cyl  4.28498 5.62102   0.66802   % replay part of right-bottom graphite element
 surf 10 cyl  -5.62102 4.28498  0.66802   % replay part of right-upper graphite element 0.51 octa
 surf 11 cyl  5.62102 -4.28498  0.66802   % replay part of left-bottom graphite element
-% --- Cells: Universe 11: Zone I-A
+% --- Cells: Universe 11: Zone I-B
 cell 1  11  fuel  -1                        % Fuel hole
 cell 2  11  moder 1 -2 4 5 6 7 8 9 10 11    % Graphite block
 cell 3  11  fuel  2 4 5 6 7 8 9 10 11    % Fuel salt outside graphite block
@@ -21,28 +21,28 @@ cell 8  11  moder -8                        % replay part of left-upper graphite
 cell 9  11  moder -9                        % replay part of right-bottom graphite element
 cell 10 11  moder -10                       % replay part of right-upper graphite element
 cell 11 11  moder -11                       % replay part of left-bottom graphite element
-% ============ Bottom part: Zone I-A (Universe 12) ========================
+% ============ Bottom part: Zone I-B (Universe 12) ========================
 surf 12 cyl 0.0 0.0 4.953                     % Graphite round outer wall
 cell 601  12  fuel  -1                        % Fuel hole
 cell 602  12  moder 1 -12                     % Graphite block
 cell 603  12  fuel  12                        % Fuel salt outside graphite block
-% ============ Upper part 1: Zone I-A (Universe 13) ========================
+% ============ Upper part 1: Zone I-B (Universe 13) ========================
 surf 13 cyl 0.0 0.0 4.953                   % Graphite round outer wall above main 13-feet part
 cell 604  13  fuel  -1                        % Fuel hole
 cell 605  13  moder 1 -13                     % Graphite block
 cell 606  13  fuel  13                        % Fuel salt outside graphite block
-% ============ Upper part 2: Zone I-A (Universe 14) ========================
+% ============ Upper part 2: Zone I-B (Universe 14) ========================
 surf 14 cone 0.0 0.0 0.0 4.953 12.66          % Graphite cone outer wall part
 cell 607  14  fuel  -1                        % Fuel hole
 cell 608  14  moder 1 -14                     % Graphite block
 cell 609  14  fuel  14                        % Fuel salt outside graphite block
-% ============ Upper part 3: Zone I-A (Universe 15) ========================
+% ============ Upper part 3: Zone I-B (Universe 15) ========================
 surf 15  cyl  0.0 0.0 2.2225                  % Graphite outer wall part
 surf 16  cyl  0.0 0.0 0.762                   % Fuel hole 0.6 in
 cell 616  15  hast  -1                        % Hastelloy N
 cell 617  15  moder 1 -15                     % Graphite block
 cell 618  15  fuel  15                        % Fuel salt outside graphite block
-% ======== Vertical stack Zone I-A cell (marked as 1 in main lattice) ===========================================
+% ======== Vertical stack Zone I-B cell (marked as 1 in main lattice) ===========================================
 lat 1 9 0.0 0.0 5
  0.0    12
 22.86   11
