recurse submodules when installing openmc from source

--- a/.github/workflows/test-saltproc.yml
+++ b/.github/workflows/test-saltproc.yml
@@ -81,6 +81,7 @@ jobs:
         with: 
           repository: openmc-dev/openmc
           path: openmc
+          submodules: recursive
 
       - name: Build OpenMC from source if no cache is found
         if: steps.dependencies-cache.outputs.cache-hit != 'true'
