fix documentation building workflows; make dependencies consistent

--- a/.github/workflows/cache-dependencies.yml
+++ b/.github/workflows/cache-dependencies.yml
@@ -99,5 +99,8 @@ jobs:
         run: mamba env update -n saltproc-doc-env -f doc/doc-environment.yml
         if: steps.dependencies-cache.outputs.cache-hit != 'true'
 
+     - name: Install SaltProc
+        run: pip install .
+
       - name: Check packages
         run: conda list
